# hornlab-bempp-bem

./: .gitignore  README.md  pyproject.toml
hornlab_bempp_bem/: __init__.py  _constants.py  backends.py  bie.py  config.py  device.py  mesh.py  result.py  sweep.py
hornlab_bempp_bem/validation/: native_symmetry.py
tests/: test_bie_unit.py  test_config.py  test_impedance_bc.py  test_mesh_orientation.py  test_native_symmetry_guard.py  test_native_symmetry_validation.py  test_observation.py  test_observation_frame_parity.py  test_package_metadata.py  test_reference_asro68.py  test_result.py  test_sweep_callbacks.py  test_wg_solver_parity.py
