[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hornlab-bempp-bem"
version = "0.1.0"
description = "Cross-platform bempp-cl acoustic BEM solver for HornLab"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "numpy>=1.21",
    "bempp-cl>=0.4,<0.5",
    "meshio>=5.0",
    # bie.py calls scipy.linalg directly; until now scipy only arrived
    # transitively via bempp-cl.
    "scipy>=1.7",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
markers = [
    "slow: validation tests that run a real BEM solve",
]
